Trigger-Framework/objects/Trigger_Action__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Toggle to enable/disable this action without deployment</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>