Trigger-Framework/objects/Trigger_Action__mdt/fields/Class_Name__c.field-meta.xml
<CustomField>
    <fullName>Class_Name__c</fullName>
    <description>Fully qualified Apex class name implementing ITriggerAction or IAsyncTriggerAction</description>
    <label>Class Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>