Trigger-Framework/objects/Trigger_Action__mdt/fields/Context__c.field-meta.xml
<CustomField>
    <fullName>Context__c</fullName>
    <description>Trigger context: BEFORE_INSERT, BEFORE_UPDATE, BEFORE_DELETE, AFTER_INSERT, AFTER_UPDATE, AFTER_DELETE, AFTER_UNDELETE</description>
    <label>Context</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>