Trigger-Framework/objects/Trigger_Action__mdt/fields/Max_Recursion__c.field-meta.xml
<CustomField>
    <fullName>Max_Recursion__c</fullName>
    <description>Maximum times this action executes per transaction. Null or 0 = no limit. Default: 1</description>
    <label>Max Recursion</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>