Trigger-Framework/objects/Trigger_Action__mdt/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <description>Execution priority. Lower numbers execute first. Allows decimals for insertion between existing actions (e.g., 10, 20, 25, 30)</description>
    <label>Order</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>