Trigger-Framework/objects/Trigger_Action__mdt/fields/SObject__c.field-meta.xml
<CustomField>
    <fullName>SObject__c</fullName>
    <description>API name of the SObject (e.g., Account, My_Object__c)</description>
    <label>SObject</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>